<resources>
    <string name="app_name">Sezon na zdrowie</string>
    <string name="drawer_open">Otwórz</string>
    <string name="drawer_close">Zamknij</string>

    <string name="january">STYCZEŃ %d</string>
    <string name="february">LUTY %d</string>
    <string name="march">MARZEC %d</string>
    <string name="april">KWIECIEŃ %d</string>
    <string name="may">MAJ %d</string>
    <string name="june">CZERWIEC %d</string>
    <string name="july">LIPIEC %d</string>
    <string name="august">SIERPIEŃ %d</string>
    <string name="september">WRZESIEŃ %d</string>
    <string name="october">PAŹDZIERNIK %d</string>
    <string name="november">LISTOPAD %d</string>
    <string name="december">GRUDZIEŃ %d</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-9982327151344679/3616706545</string>
    <string name="adMobTestDeviceNote5">456841FFFB7E3C53875E713E9A638290</string>
    <string name="adMobTestDeviceS5">F0E0DF548AD32B9C9DF78977B9079AD2</string>
    <string name="season_vegetables">SEZON NA WARZYWA</string>
    <string name="season_fruits">SEZON NA OWOCE</string>
    <string name="season_incoming">WKRÓTCE SEZON NA</string>
    <string name="calendar">KALENDARZ</string>
    <string name="shopping_list">LISTA ZAKUPÓW</string>
    <string name="settings">USTAWIENIA</string>
    <string name="added_to_shopping_list">DODANO DO LISTY ZAKUPÓW!</string>
    <string name="proximates">Wartość odżywcza (100g)</string>
    <string name="proximate_water">woda</string>
    <string name="proximate_energy">kalorie</string>
    <string name="proximate_protein">białka</string>
    <string name="proximate_fat">tłuszcze</string>
    <string name="proximate_carbohydrates">węglowodany</string>
    <string name="proximate_fiber">błonnik</string>
    <string name="proximate_sugars">cukry</string>
    <string name="minerals">Zawartość mikro- i makroelementów (100g)</string>
    <string name="minerals_calcium">wapń</string>
    <string name="minerals_iron">żelazo</string>
    <string name="minerals_magnesium">magnez</string>
    <string name="minerals_phosphorus">fosfor</string>
    <string name="minerals_potassium">potas</string>
    <string name="minerals_sodium">sód</string>
    <string name="minerals_zinc">cynk</string>
    <string name="vitamins">Witaminy (100g)</string>
    <string name="vitamins_A">witamina A</string>
    <string name="vitamins_C">witamina C</string>
    <string name="vitamins_E">witamina E</string>
    <string name="vitamins_B1">witamina B1 (tiamina)</string>
    <string name="vitamins_B2">witamina B2 (ryboflawina)</string>
    <string name="vitamins_B3">witamina B3 (niacyna)</string>
    <string name="vitamins_B6">witamina B6</string>
    <string name="vitamins_K">witamina K</string>
    <string name="vitamins_folate">kwas foliowy</string>
    <string name="food_data_source">Źródło: USDA National Nutrient Database</string>
    <string name="food_detail_item">%1$s - %2$s</string>
    <string name="removed_product_name">Usunięto produkt `%1$s`</string>
    <string name="shopping_list_add_dialog_title">Dodawanie do listy zakupów</string>
    <string name="shopping_list_add_dialog_message">Wpisz nazwę produktu do dodania</string>
    <string name="cancel">Anuluj</string>
    <string name="add">Dodaj</string>
    <string name="empty_product_name_message">Musisz wpisać nazwę produktu</string>
    <string name="current_season">Trwa sezon na</string>
    <string name="fruits_btn">Owoce</string>
    <string name="vegetables_btn">Warzywa</string>
    <string name="incoming_season_btn">Wkrótce sezon na…!</string>
    <string name="calendar_btn">Kalendarz</string>
    <string name="shopping_list_btn">Lista zakupów</string>
    <string name="fruits_capitals">OWOCE</string>
    <string name="vegetables_capitals">WARZYWA</string>
    <string name="delete">Usuń</string>
    <string name="shopping_list_delete_dialog_title">Czy chcesz usunąć?</string>
    <string name="shopping_list_delete_dialog_message">Czy chcesz usunąć produkt `%1$s`</string>
    <string name="season">Sezon</string>
    <string name="season_all_year">Sezon: całoroczne</string>
    <string name="season_from_to">Sezon: %1$s - %2$s</string>
    <string name="notification_fruit">Powiadomienia o owocach</string>
    <string name="notification_vegetable">Powiadomienia o warzywach</string>
    <string name="notification_season_start">Powiadomienie o początku sezonu</string>
    <string name="notification_season_end">Powiadomienia o końcu sezonu</string>
    <string name="notification">Powiadomienia</string>

    <string name="at_the_start_day">w dniu początku</string>
    <string name="at_the_end_day">w dniu końca</string>
    <string name="week_before">tydzień przed</string>
    <string name="month_before">miesiąc przed</string>
    <string name="no_notification">Bez powiadomienia</string>
    <string name="preview">Preview</string>
    <string name="app_logo">Application logo</string>
    <string name="season_starts_soon">Wkrótce zacznie się sezon na</string>
    <string name="season_starts_week">Za tydzień zacznie się sezon na</string>
    <string name="season_starts_month">Za miesiąc zacznie się sezon na</string>
    <string name="season_ends_soon">Wkrótce skończy się sezon na</string>
    <string name="season_ends_week">Za tydzień skończy się sezon na</string>
    <string name="time_dialog_set">Ustaw</string>
    <string name="notification_hour">Godzina powiadomienia</string>
</resources>
