<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    tools:context="com.karol.sezonnazdrowie.view.MainActivity">

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <LinearLayout
            android:id="@+id/whiteStripe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:background="@android:color/white"
            android:orientation="vertical" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:text="@string/current_season"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/fruitsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_turquis"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/fruits_btn"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/vegetablesBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_green"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/vegetables_btn"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/mainLogoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/truskawka1" />

                <Button
                    android:id="@+id/incomingSeasonBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_button_height"
                    android:background="@drawable/button_turquis"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/incoming_season_btn"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/calendarBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_green"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/calendar_btn"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/shopListBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_green"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/shopping_list_btn"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
</LinearLayout>
